2005-09-10 J.R. Heisey <jrheisey@sourceforge.com>
	* src/cmd_gpsim.h, cli/ui_gpsim.cc: Modified one of the
	FormatProgramAddress() functions in IUserInterface and
	CGpsimUserInterface.

2005-09-09 Scott Dattalo <scott@dattalo.com>
	* src/cod.cc: delete_directory() incorrectly deleted memory.

2005-09-08 J.R. Heisey <jrheisey@sourceforge.com>
	* configure.ac, plat/win32/gpsim.nsi: bump build number

	* gui/gui_src_asm.cc, src/value.cc: Fixed crashes when
	'Add to watch' menu item is selected with no test selected
	or with white space selected.

2005-09-07 Scott Dattalo <scott@dattalo.com>
	* cli/cmd_load.cc: null pointer fix (was causing core dump in the
	regression test).
	* module/usart.cc: added the TxBuffer attribute.
	* regression/usart_test/usart_test.cc: tested usart module transmitter.

2005-09-07 J.R. Heisey <jrheisey@sourceforge.com>
	* cli/cmd_load.cc, cli/parse.yy: Fixed a bug in load command
	where you could not specify both processor and file as literal
	strings.

2005-09-06 J.R. Heisey <jrheisey@sourceforge.com>
	* gui_processor.cc, gui_processor.h, gui_register.h, gui_regwin.cc,
	gui_regwin.h, gui_watch.cc, gui_main.cc: Changed Register_Window::
	registers from type GUIRegister* to GUIRegisterList*.
	Added GUIRegisterList * m_pGUIRegisters to GUI_Processor.
	Now GUIRegisters are instantiated in a GUI_Processor for
	that other windows besides the RAM_RegisterWindow. This
	fixes a bug where you cannot add a register symbol to the
	watch window unless the RAM_RegisterWindow was opened
	once.

	* gui/gui_src_asm.cc, gui/gui_watch.cc: Removed 'Select symbol'
	pop up menu item since it was broken anyway. Added 'Add to watch'
	pop up menu item. Select symbol text in the source window, selecting
	'Add to watch' will add register symbols to the Watch window.

	* src/symbol.cc, src/symbol.h: Added findRegisterSymbol() that
	accepts a const char * as a parameter.

	gui/gui_main.cc: Call new function GUI_Processor::SetCPU() from