@@ -1,3 +1,10 @@
+2005-09-11 Scott Dattalo <scott@dattalo.com>
+	* src/ioports.cc, src/ioports.h, src/stimuli.cc, src/stimuli.h,
+	src/value.cc, gui/gui_breadboard.cc, gui/gui_breadboard.h:
+	Attributes can now be updated through the breadboard. Pin states
+	can now be updated through the breadboard.
+
+
 2005-09-10 J.R. Heisey <jrheisey@sourceforge.com>
 	* src/cmd_gpsim.h, cli/ui_gpsim.cc: Modified one of the
 	FormatProgramAddress() functions in IUserInterface and
